--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="connectionInner">
                 <h1>San Andreas Police Radio</h1>
                 <p>
-                    <span class="scriptName">San Andreas Police Radio</span> is
+                    <span class="scriptName">San Andreas Emergency Communication Networks</span> is
                     our Motorola Radio emulator, using a custom made TS3 plugin.
                 </p>
                 <p>
@@ -40,7 +40,7 @@
                     <li>911 calls</li>
                 </ul>
                 <p>
-                    <span class="scriptName">San Andreas Police Radio</span>
+                    <span class="scriptName">San Andreas EC Networks</span>
                     must be <span class="blue">installed</span> and
                     <span class="blue">running</span> to play on our servers.
                 </p>
