--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-        <title>San Andreas Police Radio</title>
+        <title>San Andreas Emergency Communication Networks</title>
         <meta charset="UTF-8">
         <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
         <meta http-equiv="Pragma" content="no-cache">
