--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="tooltip"></div>
         <div class="absolute" id="connectionBox">
             <div id="connectionInner">
-                <h1>San Andreas Police Radio</h1>
+                <h1>SSan Andreas Emergency Communication Networks</h1>
                 <p>
                     <span class="scriptName">San Andreas Emergency Communication Networks</span> is
                     our Motorola Radio emulator, using a custom made TS3 plugin.
